--- a/download.html
+++ b/download.html
@@ -21,7 +21,7 @@
 
 <h2><span class='mw-headline' id='Windows'> Windows </span></h2>
 <ul>
-  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.1.1/xowa_app_windows_64_v2.8.1.1.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
+  <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.1.1/xowa_app_windows_64_v2.8.1.1a.zip" class="external text" rel="nofollow">Windows (64-bit)</a>
   </li>
   <li> <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.1.1/xowa_app_windows_v2.8.1.1.zip" class="external text" rel="nofollow">Windows (32-bit)</a>
   </li>
