--- a/blog.html
+++ b/blog.html
@@ -18,6 +18,21 @@
 
 <!-- page_bgn -->
     <h2>
+      <span class='mw-headline' id='Release:_Windows_64-bit_update_.282015-08-03_20:15_Mon.29'>Release: Windows 64-bit update (2015-08-03 20:15 Mon)</span>
+    </h2>
+    <p>
+      Unfortunately, I uploaded non-working versions of the Windows 64-bit app yesterday. See <a href="https://sourceforge.net/p/xowa/discussion/general/thread/652c6303/" class="external text" rel="nofollow">https://sourceforge.net/p/xowa/discussion/general/thread/652c6303/</a>
+    </p>
+    <p>
+      I uploaded a fixed application package for Windows 64-bit now: <a href="https://github.com/gnosygnu/xowa/releases/download/v2.8.1.1/xowa_app_windows_64_v2.8.1.1a.zip" class="external text" rel="nofollow">https://github.com/gnosygnu/xowa/releases/download/v2.8.1.1/xowa_app_windows_64_v2.8.1.1a.zip</a>
+    </p>
+    <p>
+      I'm going to skip the update package for now.
+    </p>
+    <p>
+      My apologies for the error.
+    </p>
+    <h2>
       <span class='mw-headline' id='Release:_v2.8.1.1_.282015-08-02_22:15_Sun.29'>Release: v2.8.1.1 (2015-08-02 22:15 Sun)</span>
     </h2>
     <h3>
